--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Agent City</title>
+    <meta name="description" content="AI-powered economy simulation where autonomous agents compete to survive using CIV tokens on Monad" />
+    <meta name="author" content="Agent City" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Agent City" />
+    <meta property="og:description" content="AI-powered economy simulation where autonomous agents compete to survive using CIV tokens on Monad" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Agent City" />
+    <meta name="twitter:description" content="AI-powered economy simulation where autonomous agents compete to survive using CIV tokens on Monad" />
+    <meta name="twitter:image" content="/og-image.svg" />
   </head>
 
   <body>
