Refactor IsometricViewport for RPG pixel-art style; remove rotation controls, adjust zoom limits, and enhance styling. Update PhaseOverlay with neon effects and pixel skull design. Revise cityGridData for a larger grid layout and adjust agent placements. Enhance CSS for pixel-art aesthetics, including new animations and RPG-themed colors. Extend Tailwind config for pixel fonts and RPG color palette.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="AI-powered economy simulation where autonomous agents compete to survive using CIV tokens on Monad" />
     <meta name="author" content="Agent City" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet" />
 
     <meta property="og:title" content="Agent City" />
     <meta property="og:description" content="AI-powered economy simulation where autonomous agents compete to survive using CIV tokens on Monad" />
